openapi place holders
